--- a/second-week-homework/contact.html
+++ b/second-week-homework/contact.html
@@ -10,24 +10,24 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
     crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="font-family: 'Oswald', sans-serif;">
     <nav class="navbar" style="background-color:white; margin:5px 20px 0px;">
-        <div class="navbar-header col-xs-12 col-sm-4 col-md-3 text-center bg-info" style="color:white; font-style:bold">
-            <h1 style="font-size:30px;">Lusi Wang</h1>
+        <div class="navbar-header col-xs-12 col-sm-4 col-md-3 text-center bg-info" style="color:white; font-family: 'Oswald', sans-serif">
+            <h1 style="font-size:40px;">Lusi Wang</h1>
         </div>
         <div class="navbar-items col-sm-5 col-md-4">
             <ul class="nav nav-pills" >
-                <li class="active"><a href="#" class="text-secondary" style="padding:10px;" target="_blank">About</a></li>
+                <li class="active"><a href="index.html" class="text-secondary" style="padding:10px;" target="_self">About</a></li>
                 <li>|</li>
-                <li class="active"><a href="#" class="text-secondary" style="padding:10px;" target="_blank">Portfolio</a></li>
+                <li class="active"><a href="portfolio.html" class="text-secondary" style="padding:10px;" target="_self">Portfolio</a></li>
                 <li>|</li>
-                <li class="active"><a href="#" class="text-secondary" style="padding:10px;" target="_blank">Contact</a></li>
+                <li class="active"><a href="contact.html" class="text-secondary" style="padding:10px;" target="_self">Contact</a></li>
             </ul>
         </div>
     </nav>
-    <hr style="width:100%; color:rgb(131, 128, 128); height=1px; background-color:rgb(131, 128, 128);">
    
     <section style="background-color:#afeeee">
 
@@ -68,13 +68,6 @@
     </div>
     
     
-
-
-
-
-
-
-
     <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
