update my homework

--- a/second-week-homework/index.html
+++ b/second-week-homework/index.html
@@ -17,7 +17,7 @@
 </head>
 <body style="font-family: 'Oswald', sans-serif;">
   <nav class="navbar" style="background-color:white; margin:5px 20px 0px;">
-    <div class="navbar-header col-xs-12 col-sm-4 col-md-3 text-center bg-info" style="color:white; font-family: 'Oswald', sans-serif">
+    <div class="navbar-header col-xs-12 col-sm-4 col-md-3 text-center text-white bg-info">
         <h1 style="font-size:40px;">Lusi Wang</h1>
     </div>
     <div class="navbar-items col-sm-5 col-md-4">
@@ -31,9 +31,9 @@
     </div>
   </nav>
 
-  <section style="background-color:#afeeee">
-    <div class="row" style="padding:40px 20px 300px;">
-      <div class="col-xs-12 col-sm-12 col-md-8" style="padding:20px 40px 100px; margin-left:30px;background-color:white;">
+  <div style="background-color:#afeeee">
+    <div class="row" style="padding:40px 20px 300px; margin:5px 20px 0px;">
+      <div class="col-xs-12 col-sm-12 col-md-8 bg-white" style="padding:20px 40px 100px;">
           <h2 class="text-info" style="margin:5px;">About Me</h2>
           <hr style="width:100%;  color:rgb(131, 128, 128); height=1px; background-color:rgb(131, 128, 128);">
           <div class="row">
@@ -41,17 +41,18 @@
               <img class="img-responsive" src="../../../../desktop/lucy.png" style="width:80%" alt="Lusi Wang Photo">
             </div>
             <div class="col-sm-6 col-md-8">
-              <p>a paragraph can be just one sentence long. Ultimately, a paragraph is a sentence or group of sentences that support one main idea. In this handout, we will refer to this as the “controlling idea,” because it controls what happens in the rest of the paragraph.This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.</p>
+              <p class="h6" style="line-height:40px;">Hello! My name is <strong>Lusi Wang</strong>. I'm a web developer from Morrisville, North Carolina. I used to be an event planner in China. I planned big concerts and shows for thousands of people. My team and I worked closely with each client to understand their ideas and visions, incorporate trends, and create the total experience from start to finish. Our team loves a challenge and thrives on the unexpected. Let us turn your warehouse, a local airplane hangar or a coastal cruise terminal into an unforgettable experience. We focus on the little details, making sure each design element not only matches the overall design aesthetic, but also is aligned with your event goals and company brand. Whether it’s bright, eye-catching florals for a pop of color, rustic, earthy tones for an outdoor event, or elegant jewel toned accents for a formal dinner, we choose meaningful decor.</p>
             </div>
           </div>
           <br>
           <div class="row">
-            <p>This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.</p>
+            <p class="h6" style="line-height:40px;">This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.</p>
           </div>
+          <br>
           
           <div>
             <a href="https://www.facebook.com/lusi.wang.12" target="_blank" class="btn btn-block btn-social text-white btn-facebook" style="background-color:#3b5998" >
-              <span class="fa fa-facebook"></span> Visit me in facebook
+              <span class="fa fa-facebook"></span> Visit me in Facebook
             </a>
             <a href="https://www.linkedin.com/in/lusi-wang/" target="_blank" class="btn btn-block btn-social text-white btn-linkedin" style="background-color:#007BB6" >
               <span class="fa fa-linkedin"></span> Visit me in Linkedin
@@ -65,7 +66,7 @@
           
 
     </div>
-  </section>
+  </div>
 
   <div class="footer-copyright fixed-bottom text-center text-white" style="background-color:#2f4f4f;padding:20px;">
     @copyright
