--- a/second-week-homework/portfolio.html
+++ b/second-week-homework/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body style="font-family: 'Oswald', sans-serif;">
     <nav class="navbar" style="background-color:white; margin:5px 20px 0px;">
-        <div class="navbar-header col-xs-12 col-sm-4 col-md-3 text-center bg-info" style="color:white;">
+        <div class="navbar-header col-xs-12 col-sm-4 col-md-3 text-center text-white bg-info">
             <h1 style="font-size:40px;">Lusi Wang</h1>
         </div>
         <div class="navbar-items col-sm-5 col-md-4">
@@ -28,57 +28,69 @@
         </div>
     </nav>
 
-    <section style="background-color:#afeeee">
-        <div class="row" style="padding:40px 20px 300px;margin-left:20px;">
+    <div style="background-color:#afeeee">
+        <div class="row" style="padding:40px 20px 300px;margin:5px 20px 0px;">
             <div class="col-xs-12 col-sm-12 col-md-8 bg-white" style="padding:20px 40px 100px;">
                 <br>
                 <h2 class="text-info" style="margin:5px;">Portfolio</h2>
                 <hr style="width:100%;  color:rgb(131, 128, 128); height=1px; background-color:rgb(131, 128, 128);">
 
                 <div class="row"> 
-                    <div class="col-md-6">
-                        <img class="col-xs-12 col-sm-6 img-responsive" src="../../../../desktop/Lucy-PR-photo/photo1.jpg"  alt="super models show">
-                        <div class="carousel-caption">
-                            <p class="text-center bg-info">Example headline.</p>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="thumbnail">
+                            <img src="../../../../desktop/Lucy-PR-photo/photo1.jpg"  alt="super model show" style="width:100%">
+                            <div class="caption">
+                                <p class="h4 text-center text-light bg-info">Corporate Event Planning</p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6">
-                        <img class="col-sm-6 img-responsive"  src="../../../../desktop/Lucy-PR-photo/photo3.jpg"  alt="display">
-                        <div class="carousel-caption">
-                            <p>Example headlinejfkjeoljfoejlo.</p>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="thumbnail">
+                            <img src="../../../../desktop/Lucy-PR-photo/photo4.jpg"  alt="customed stage" style="width:100%">
+                            <div class="caption">
+                                <p class="h4 text-center text-light bg-info">Corporate Event Planning</p>
+                            </div>
+                        </div>
+                    </div> 
+                </div>   
+
+                <div class="row"> 
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="thumbnail">
+                            <img  src="../../../../desktop/Lucy-PR-photo/photo5.jpg"  alt="dancing show" style="width:100%">
+                            <div class="caption">
+                                <p class="h4 text-center text-light bg-info">Event Entertainment for Corporate Events</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="thumbnail">
+                            <img src="../../../../desktop/Lucy-PR-photo/photo7.jpg"  alt="super model show" style="width:100%">
+                            <div class="caption">
+                                <p class="h4 text-center text-light bg-info">Event Entertainment for Corporate Events</p>
+                            </div>
                         </div>
                     </div>
                 </div>   
 
                 <div class="row"> 
-                    <div class="col-md-6">
-                        <img class="col-xs-12 col-sm-6 img-responsive" src="../../../../desktop/Lucy-PR-photo/photo4.jpg"  alt="customed stage">
-                        <div class="carousel-caption">
-                            <p>Example headline.</p>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="thumbnail">
+                            <img src="../../../../desktop/Lucy-PR-photo/photo6.jpg"  alt="show time" style="width:100%">
+                            <div class="caption">
+                                <p class="h4 text-center text-light bg-info">Team Dining for Corporate Events</p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6">
-                        <img class="col-sm-6 img-responsive"  src="../../../../desktop/Lucy-PR-photo/photo5.jpg"  alt="dancing show">
-                        <div class="carousel-caption">
-                            <p>Example headlinejfkjeoljfoejlo.</p>
-                        </div>
-                    </div>
-                </div>   
-
-                <div class="row"> 
-                    <div class="col-md-6">
-                        <img class="col-xs-12 col-sm-6 img-responsive" src="../../../../desktop/Lucy-PR-photo/photo6.jpg"  alt="show time">
-                        <div class="carousel-caption">
-                            <p>Example headline.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <img class="col-sm-6 img-responsive"  src="../../../../desktop/Lucy-PR-photo/photo7.jpg"  alt="super models">
-                        <div class="carousel-caption">
-                            <p>Example headlinejfkjeoljfoejlo.</p>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="thumbnail">
+                            <img  src="../../../../desktop/Lucy-PR-photo/photo3.jpg"  alt="display" style="width:100%">
+                            <div class="caption">
+                                <p class="h4 text-center text-light bg-info">Corporate Event Decor</p>
+                            </div>
                         </div>
                     </div>
                 </div>  
@@ -92,7 +104,7 @@
                        
             </div>
         </div>
-      </section>
+    </div>
 
 
 
